# costco-business-sdk

./: .gitignore  README.md  pyproject.toml
examples/: basic_search.py  find_deals.py  nearest_location.py
src/costco_business_sdk/: __init__.py  cli.py  client.py  exporters.py  http.py  locations.py  models.py
tests/: conftest.py  test_exporters.py  test_locations.py  test_models.py
tests/fixtures/: megamenu_response.json  search_response.json
