[project]
name = "costco-business-sdk"
version = "0.1.0"
description = "Python SDK for the Costco Business Delivery product search API — search products, check prices, find deals, and browse categories across all US Business Center locations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hugh Gramelspacher" },
]
keywords = ["costco", "business-center", "catalog", "pricing", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
costco-biz = "costco_business_sdk.cli:app"

[project.urls]
Homepage = "https://github.com/hughgramel/costco-business-sdk"
Repository = "https://github.com/hughgramel/costco-business-sdk"
Issues = "https://github.com/hughgramel/costco-business-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/costco_business_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100
